--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,8 @@
 
     <properties>
         <httpclient.version>4.3.3</httpclient.version>
-        <jackson.version>2.8.4</jackson.version>
+        <jackson.version>2.8.11</jackson.version>
+        <jackson.databind.version>2.8.11.1</jackson.databind.version>
         <spring.version>4.3.1.RELEASE</spring.version>
         <jadler.version>1.1.1</jadler.version>
         <json-unit.version>1.23.0</json-unit.version>
@@ -317,7 +318,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
+            <version>${jackson.databind.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
